1998-12-05  XEmacs Build Bot <builds@cvs.xemacs.org>

	* XEmacs 21.2.5 is released

1998-11-28  SL Baur  <steve@altair.xemacs.org>

	* XEmacs 21.2-beta4 is released.

1998-11-27  SL Baur  <steve@altair.xemacs.org>

	* configure.in: Linux/Arm Support.
	From James LewisMoss <dres@ioa.com>

1998-11-27  Takeshi Hagiwara  <hagiwara@ie.niigata-u.ac.jp>

	* configure.in:
	Fix the realpath() problem of UnixWare2.1.3.
	Patches for NEC's sysv4.2 machine.

1998-11-09  Kazuyuki IENAGA  <ienaga@jsys.co.jp>

	* configure.in: Check if there's wnn4.2 or wnn6 specific library
	installed. The Wnn library will be checked if the --with-wnn
	and/or --with-wnn6 was specified compulsory.

1998-07-28  Jan Vroonhof  <vroonhof@math.ethz.ch>

	* configure.in (CPP): Too many spaces im run-patch flag detection.

1998-10-15  SL Baur  <steve@altair.xemacs.org>

	* XEmacs 21.2-beta3 is released.

1998-10-13  Andy Piper  <andyp@parallax.co.uk>

	* configure.in: enable drag and drop support by default if mswindows is
	detected.

1998-10-09  Kevin Oberman  <oberman@es.net>

	* config.sub: Fix for Alpha architecture

1998-10-05  Andy Piper  <andyp@parallax.co.uk>

	* configure.in: don't enable shared lib support for cygwin unless
	explititly told to.

1998-10-02  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* etc/xemacs.1: Remove misplace "\".

1998-09-29  SL Baur  <steve@altair.xemacs.org>

	* XEmacs 21.2-beta2 is released.

1998-09-09  Gunnar Evermann  <Gunnar.Evermann@nats.informatik.uni-hamburg.de>

	* lwlib/xlwmenu.c:
	* lwlib/xlwscrollbar: fix for Motif >=2.0
	Patch provided by Glenn Barry <gtb@eng.sun.com>

	* PROBLEMS: XEmacs 21.0 now works on HP-UX 11.0

1998-09-02  Andy Piper  <andyp@parallax.co.uk>

	* configure.in: check for cygwin32/version.h.

1998-08-31  Michael Sperber [Mr. Preprocessor]  <sperber@informatik.uni-tuebingen.de>

	* PROBLEMS: Added AIX 4.3 note.

	* configure.in: Better detection of AIX 4.3.
	AIX xlc can do -g and -Ox at the same time.
