@@ -1,8 +1,8 @@
 #!/bin/sh
 emacs_major_version=21
 emacs_minor_version=2
-emacs_beta_version=5
-xemacs_codename="Aphrodite"
+emacs_beta_version=6
+xemacs_codename="Apollo"
 infodock_major_version=4
 infodock_minor_version=0
 infodock_build_version=1
